cmake_minimum_required(VERSION 3.25)
project(leetCodeGithub)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetCodeGithub
        main.cpp solutions/Solution1337.hpp solutions/Solution2451.hpp solutions/Solution1091.hpp solutions/Solution1110.hpp solutions/Solution1110.hpp solutions/Solution1130.hpp solutions/Solution2517.hpp solutions/Solution2559.hpp solutions/Solution2559.hpp)
